#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(zuc, 0.0.1, liyang.jasper@gmail.com)
AM_INIT_AUTOMAKE([1.10 -Wall])
AC_OUTPUT(Makefile src/Makefile doc/Makefile examples/Makefile)

AM_PROG_AR
AC_PROG_CXX
LT_INIT()

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
