
lib_LTLIBRARIES = libzuc.la
libzuc_la_SOURCES = util.c cJSON.c minIni.c rand.c daemon.c adlist.c udscs.c
library_includedir=$(includedir)/zuc
library_include_HEADERS = util.h cJSON.h  ctest.h  macrologger.h minIni.h rand.h adlist.h list.h udscs.h
#AM_CXXFLAGS = ${libgtkmm_CFLAGS}
libzuc_la_LIBADD = -lm -lpthread
#libzuc_la_LDFLAGS = -version 0:0:0
